--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,37 @@
  *= require_tree .
  *= require_self
  */
+
+
+
+form {
+  margin-top: 30px;
+  padding: 30px;
+}
+
+h1 {
+  margin: 30px;
+}
+
+p {
+  margin-bottom: 10px;
+  margin-left: 30px;
+}
+
+a {
+  margin: 20px;
+  margin-left: 30px;
+  color: white;
+  padding: 8px 24px;
+  border-radius: 4px;
+  background: #0b44ff;
+  transition: background 0.3s ease;
+  border-width: 0px;
+  text-decoration: none;
+}
+
+a:hover {
+  background: #000000;
+  color: white;
+  border-color: #0b44ff;
+}
